<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/question"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/wave"
        android:layout_width="260dp"
        android:layout_height="245dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:srcCompat="@drawable/wave" />

    <Button
        android:id="@+id/yes"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/green"
        android:text="@string/yes_button"
        android:fontFamily="@font/roboto_mono_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/no"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/red"
        android:text="@string/no_button"
        android:fontFamily="@font/roboto_mono_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>