<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/intro"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/intro2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/intro2"
        android:layout_width="254dp"
        android:layout_height="52dp"
        android:layout_marginBottom="560dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/intro2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/robot"
        android:layout_width="160dp"
        android:layout_height="190dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="210dp"
        android:layout_marginBottom="103dp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toStartOf="@+id/donut"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/robot_svg" />

    <ImageView
        android:id="@+id/donut"
        android:layout_width="150dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro2"
        app:layout_constraintVertical_bias="0.953"
        app:srcCompat="@drawable/donut" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="340dp"
        android:layout_height="58dp"
        android:layout_marginBottom="70dp"
        android:text="@string/next_button"
        android:fontFamily="@font/roboto_mono"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>